# Target

./: README.md
TargetBridge/: TargetBridge.sln
TargetBridge/TargetBridge/: App.config  FormBridge.Designer.cs  FormBridge.cs  FormBridge.resx  Logger.cs  Program.cs  TargetBridge.csproj  TargetBridge_TemporaryKey.pfx
TargetBridge/TargetBridge/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
TargetBridge/TargetBridgeSetup/: TargetBridgeSetup.vdproj
TargetBridge/TargetBridgeSetup/Release/: TargetBridgeSetup.msi
electronic/: Front.stl  Target.brd  Target.sch  keymap.stl
targetclient/: CMakeLists.txt  dialogprofile.cpp  dialogprofile.h  dialogprofile.ui  handboxreceiver.cpp  handboxreceiver.h  indiclient.cpp  indiclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.cpp  profile.h
targetclient/arduino/Target_Astronomy_/: Target_Astronomy_.ino
targetclient/arduino/Target_Astronomy_OnStep/: Target_Astronomy_OnStep.ino
